--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.6.0",
     "react-intl": "^6.2.5",
     "react-scripts": "^5.0.1",
+    "react-world-flags": "^1.5.1",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
